Adding /smurl/ endpoint
